--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.min.css">
     <link rel="stylesheet" href="/css/app.css">
     <title>We Carry</title>
 </head>
@@ -31,7 +32,7 @@
                 <a id="orders" class="navs-mobile" href="/orders">Pedidos</a>
                 <a id="entries" class="navs-mobile" href="/entries">Solicitudes</a>
                 <a id="stats" class="navs-mobile" href="/stats">Estadísticas</a>
-                <a id="logout" class="btn btn-secondary navs-mobile" href="/users/logout">Salir</a>
+                <a id="logout" class="navs-mobile" href="/users/logout">Salir</a>
             </div>
             <i id="mobileMenuIcon" class="fas fa-bars"></i>
         </div>
