--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -27,9 +27,9 @@
             </div>
             <button type="submit" class="btn btn-primary btn-block">Login</button>
         </form>
-        <p class="lead mt-4">
+        <!-- <p class="lead mt-4">
             No tenes una cuenta? <a href="/users/register">Registrate</a>
-        </p>
+        </p> -->
         </div>
     </div>
 </div>
