--- a/app/views/partials/messages.ejs
+++ b/app/views/partials/messages.ejs
@@ -27,6 +27,15 @@
     </div>
 <% } %>
 
+<% if (suggestion_msg != '') { %>
+    <div class="alert alert-primary alert-dismissible fade show" role="alert">
+        <%= suggestion_msg %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+<% } %>
+
 <% if (error != '') { %>
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
         <%= error %>
