--- a/app/views/orders.ejs
+++ b/app/views/orders.ejs
@@ -19,7 +19,7 @@
                 <td>6</td>
                 <td>
                     <div class="tracking-link-wrapper">
-                        <a href="/tracking/159">
+                        <a href="/tracking/159/gorrasgolf">
                             <i class="fas fa-map-marker-alt"></i>
                         </a>
                     </div>
@@ -39,7 +39,7 @@
             <td>10</td>
             <td>
                 <div class="tracking-link-wrapper">
-                    <a href="/tracking/237">
+                    <a href="/tracking/237/botines">
                         <i class="fas fa-map-marker-alt"></i>
                     </a>
                 </div>
@@ -59,7 +59,7 @@
                 <td>12</td>
                 <td>
                     <div class="tracking-link-wrapper">
-                        <a href="/tracking/237">
+                        <a href="/tracking/237/camperondelluvia">
                             <i class="fas fa-map-marker-alt"></i>
                         </a>
                     </div>
