--- a/app/views/tracking.ejs
+++ b/app/views/tracking.ejs
@@ -1,5 +1,5 @@
 <div id="tracking-page" class="sections">
-    <h3>Haga el seguimiento de su producto: <code><%= product.name %></code></h3>
+    <h3>Hace el seguimiento de tu producto: <code><%= product.name %></code></h3>
     <h4>
         <code><span class="name">ID:</span> <%= product.id %></code>
     </h4>
