Working on ML integration

--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -20,6 +20,7 @@
             <a id="inventory" class="navs" href="/dashboard">Inventario</a>
             <a id="orders" class="navs" href="/orders">Pedidos</a>
             <a id="entries" class="navs" href="/entries">Solicitudes</a>
+            <a id="integrations" class="navs" href="/integrations">Integraciones</a>
             <a id="stats" class="navs" href="/stats">Estadísticas</a>
         </div>
         <div class="user-module">
