--- a/app/views/orders.ejs
+++ b/app/views/orders.ejs
@@ -75,6 +75,6 @@
     </table> 
 </div>
 <script>
-    // Show header when view is dashboard.
+    // Show header when view is orders.
     document.getElementsByTagName('header')[0].classList.add('show');
 </script>
