--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -46,6 +46,9 @@
     <script src="/js/excel-converter.js"></script>
     <script src="/js/mobile-menu.js"></script>
     <div class="loader-wrapper">
+        <div class="message">
+            <h2></h2> <!-- Message goes here -->
+        </div>
         <div class="loader"></div>
     </div>
     <div class="container">
