--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -1,6 +1,27 @@
 /* Brand COLOR Green: #99CC33 */
 /* Brand COLOR Grey: #55565B */
 
+/* FONTS */
+@font-face {
+    src: url('/fonts/DINNextLTPro-Regular.otf');
+    font-family: DINNextRegular;
+}
+
+@font-face {
+    src: url('/fonts/DINNextLTPro-Medium.otf');
+    font-family: DINNextMedium;
+}
+
+@font-face {
+    src: url('/fonts/DINNextLTPro-Light.otf');
+    font-family: DINNextLight;
+}
+
+@font-face {
+    src: url('/fonts/DINNextLTPro-Bold.otf');
+    font-family: DINNextBold;
+}
+
 /* Commons */
 html, body,
 h1, h2, h3, h4, h5, h6,
@@ -8,9 +29,7 @@ a, button, input,
 ul, ol, li {
     margin: 0;
     padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-        "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-        sans-serif !important;
+    font-family: DINNextRegular;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -30,6 +49,14 @@ ul, ol, li {
     width: 12em;
     height: 6em;
 }
+.logo-white {
+    background-image: url("/images/svg/we_carry-white.svg");
+    background-repeat: no-repeat;
+    position: relative;
+    margin: 0 auto;
+    width: 22em;
+    height: 6em;
+}
 #welcome-page a,
 #login-page button.btn-primary,
 #register-page button.btn-primary {
@@ -43,6 +70,17 @@ ul, ol, li {
 #dashboard a.btn:hover {
     background-color: #99CC33;
     color: #FFF;
+}
+
+/* LOGIN PAGE */
+#login-page .logo-card {
+    background-color: #99CC33;
+    text-align: center;
+}
+
+#login-page .logo-card p {
+    color: #FFFFFF;
+    font-weight: bold;
 }
 
 #login-page h1,
