--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -1,35 +1,37 @@
 <div id="login-page" class="row mt-5">
     <div class="col-md-6 m-auto">
+        <div class="card card-body logo-card">
+            <div class="logo-white"></div>
+            <p>DE TU WEB A SU PUERTA</p>
+        </div>
         <div class="card card-body">
-        <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Login</h1>
-        <div class="logo"></div>
-        <% include ./partials/messages %>
-        <form action="/users/login" method="POST">
-            <div class="form-group">
-            <label for="email">Email</label>
-            <input
-                type="email"
-                id="email"
-                name="email"
-                class="form-control"
-                placeholder="Email o usuario"
-            />
-            </div>
-            <div class="form-group">
-            <label for="password">Contraseña</label>
-            <input
-                type="password"
-                id="password"
-                name="password"
-                class="form-control"
-                placeholder="Contraseña"
-            />
-            </div>
-            <button type="submit" class="btn btn-primary btn-block">Login</button>
-        </form>
-        <!-- <p class="lead mt-4">
-            No tenes una cuenta? <a href="/users/register">Registrate</a>
-        </p> -->
+            <% include ./partials/messages %>
+            <form action="/users/login" method="POST">
+                <div class="form-group">
+                <label for="email">Email</label>
+                <input
+                    type="email"
+                    id="email"
+                    name="email"
+                    class="form-control"
+                    placeholder="Email o usuario"
+                />
+                </div>
+                <div class="form-group">
+                <label for="password">Contraseña</label>
+                <input
+                    type="password"
+                    id="password"
+                    name="password"
+                    class="form-control"
+                    placeholder="Contraseña"
+                />
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Login</button>
+            </form>
+            <!-- <p class="lead mt-4">
+                No tenes una cuenta? <a href="/users/register">Registrate</a>
+            </p> -->
         </div>
     </div>
 </div>
