--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -54,8 +54,9 @@ ul, ol, li {
     background-repeat: no-repeat;
     position: relative;
     margin: 0 auto;
-    width: 22em;
+    width: 16em;
     height: 6em;
+    top: 30px;
 }
 #welcome-page a,
 #login-page button.btn-primary,
@@ -76,11 +77,47 @@ ul, ol, li {
 #login-page .logo-card {
     background-color: #99CC33;
     text-align: center;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    margin-bottom: 10px;
 }
 
 #login-page .logo-card p {
     color: #FFFFFF;
     font-weight: bold;
+    position: relative;
+    top: 5px;
+}
+
+#login-page .form-card {
+    background-color: #E1E1E1;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+    min-height: 292px;
+}
+
+#login-page .round-input {
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+}
+
+#login-page .white-input {
+    background-color: #FFFFFF;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+#login-page button {
+    color: #FFFFFF !important;
+    font-weight: bold;
+    letter-spacing: 2px;
+    font-size: 16px;
 }
 
 #login-page h1,
