--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -4,30 +4,30 @@
             <div class="logo-white"></div>
             <p>DE TU WEB A SU PUERTA</p>
         </div>
-        <div class="card card-body">
+        <div class="card card-body form-card">
             <% include ./partials/messages %>
             <form action="/users/login" method="POST">
                 <div class="form-group">
-                <label for="email">Email</label>
+                <!-- <label for="email">Email</label> -->
                 <input
                     type="email"
                     id="email"
                     name="email"
-                    class="form-control"
-                    placeholder="Email o usuario"
+                    class="form-control round-input white-input"
+                    placeholder="USUARIO"
                 />
                 </div>
                 <div class="form-group">
-                <label for="password">Contraseña</label>
+                <!-- <label for="password">Contraseña</label> -->
                 <input
                     type="password"
                     id="password"
                     name="password"
-                    class="form-control"
-                    placeholder="Contraseña"
+                    class="form-control round-input white-input"
+                    placeholder="CONTRASEÑA"
                 />
                 </div>
-                <button type="submit" class="btn btn-primary btn-block">Login</button>
+                <button type="submit" class="btn btn-primary btn-block round-input">ENTRAR</button>
             </form>
             <!-- <p class="lead mt-4">
                 No tenes una cuenta? <a href="/users/register">Registrate</a>
