Added background image to login

--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -34,6 +34,7 @@
             </p> -->
         </div>
     </div>
+    <div class="col-md-6 m-auto we-carry-guy"></div>
 </div>
 <script>
     $('header').removeClass('hide');
