--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -74,6 +74,19 @@ ul, ol, li {
 }
 
 /* LOGIN PAGE */
+
+#login-page .we-carry-guy {
+    background-image: url('/images/login/guy-with-a-box.svg');
+    background-repeat: no-repeat;
+    background-position-y: 0;
+    background-position-x: -780px;
+    width: 350px;
+    height: 800px;
+    background-size: cover;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+}
+
 #login-page .logo-card {
     background-color: #99CC33;
     text-align: center;
@@ -284,6 +297,16 @@ header img.app-logo {
 
 #mobileMenu {
     display: none;
+}
+@media screen and (min-width: 1224px) {
+    #login-page .we-carry-guy {
+        display: block;
+    }
+}
+@media screen and (max-width: 1223px) {
+    #login-page .we-carry-guy {
+        display: none;
+    }
 }
 /* Mobile */
 @media screen and (max-width: 1024px) {
