--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -1,5 +1,5 @@
 <div id="login-page" class="row mt-5">
-    <div class="col-md-6 m-auto">
+    <div class="col-md-6 m-auto login-form-cards">
         <div class="card card-body logo-card">
             <div class="logo-white"></div>
             <p>DE TU WEB A SU PUERTA</p>
