Changed header styles, start working on welcome page

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -177,11 +177,11 @@ ul, ol, li {
 
 header {
     width: 100%;
-    height: 64px;
+    height: 74px;
     box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.06);
     position: fixed;
     top: 0;
-    background: #FFFFFF;
+    background: #99CC33;
     display: none;
     flex-direction: inherit;
     align-items: left;
@@ -196,16 +196,16 @@ header.show {
 header .links {
     width: 100%;
     margin: 0 auto;
-    padding-left: 1.5rem;
     text-align: left;
     vertical-align: middle;
+    padding: 15px 1.5rem 0;
 }
 
 header .links a,
 .user-module a {
     text-decoration: none;
-    color: #55565B;
-    font-size: 0.8rem;
+    color: #FFFFFF !important;
+    font-size: 1rem;
     font-weight: 400;
     letter-spacing: 0.1rem;
     margin-right: 15px;
@@ -215,9 +215,14 @@ header .links a,
     top: 5px;
 }
 
+.user-module #logout {
+    top: 8px;
+}
+
 header .links a:hover,
-header .links .selected {
-  color: #99CC33 !important;
+header .links .selected,
+.user-module a:hover {
+  color: #555555 !important;
 }
 
 header .links .selected {
