--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -15,7 +15,7 @@
     <header>
         <div class="links">
             <a href="/dashboard">
-                <img src="/images/svg/we_carry.svg" class="app-logo" alt="logo" />
+                <img src="/images/svg/logo-with-label-white.svg" class="app-logo" alt="logo" />
             </a>
             <a id="inventory" class="navs" href="/dashboard">Inventario</a>
             <a id="orders" class="navs" href="/orders">Pedidos</a>
