--- a/app/views/welcome.ejs
+++ b/app/views/welcome.ejs
@@ -1,13 +1,93 @@
 <div id="welcome-page" class="sections">
-    <div class="col-md-6 m-auto">
-    <h1>Bienvenido <b><%= user.name %></b>, te estabamos!</h1>
-    <p>
-        Desde esta plataforma podrás
-        administrar tus productos,
-        visualizar los pedidos, realizar
-        solicitudes, integraciones y
-        también analizar tus ventas.
-    </p>
+    <div class="container">
+        <!-- FIRST ROW -->
+        <div class="row">
+            <div class="col-sm col-md-4">
+                <h1>Bienvenido <b><%= user.name %></b>, te estabamos esperando!</h1>
+                <p>
+                    Desde esta plataforma podrás
+                    administrar tus productos,
+                    visualizar los pedidos, realizar
+                    solicitudes, integraciones y
+                    también analizar tus ventas.
+                </p>
+            </div>
+            <div class="col-sm col-md-4">
+                <a href="dashboard">
+                    <div class="options-links">
+                        <div class="box">
+                            <div class="card card-body top-card">
+                                <h3>INVENTARIO</h3>
+                            </div>
+                            <div class="card card-body bottom-card">
+                                <h4>ACCEDE A TU INVENTARIO</h4>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-sm col-md-4">
+                <a href="orders">
+                    <div class="options-links">
+                        <div class="box">
+                            <div class="card card-body top-card">
+                                <h3>PEDIDOS</h3>
+                            </div>
+                            <div class="card card-body bottom-card">
+                                <h4>INGRESA  A LA SECCION DE PEDIDOS</h4>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <!-- END FIRST ROW -->
+        <!-- SECOND ROW -->
+        <div class="row">
+            <div class="col-sm col-md-4">
+                <a href="entries">
+                    <div class="options-links">
+                        <div class="box">
+                            <div class="card card-body top-card">
+                                <h3>SOLICITUDES</h3>
+                            </div>
+                            <div class="card card-body bottom-card">
+                                <h4>ENTRA ACA PARA HACER UNA SOLICITUD DE INGRESO DE MERCADERIA</h4>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-sm col-md-4">
+                <a href="integrations">
+                    <div class="options-links">
+                        <div class="box">
+                            <div class="card card-body top-card">
+                                <h3>INTEGRACIONES</h3>
+                            </div>
+                            <div class="card card-body bottom-card">
+                                <h4>HACE INTEGRACIONES CON LOS MARKETPLACE MAS IMPORTANTES DEL MERCADO</h4>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-sm col-md-4">
+                <a href="stats">
+                    <div class="options-links">
+                        <div class="box">
+                            <div class="card card-body top-card">
+                                <h3>ESTADISTICAS</h3>
+                            </div>
+                            <div class="card card-body bottom-card">
+                                <h4>ACA VAS A PODER VER LAS ESTADISTICAS DE TUS ENVIOS</h4>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <!-- END SECOND ROW -->
     </div>
 </div>
 <script>
