--- a/app/views/dashboard.ejs
+++ b/app/views/dashboard.ejs
@@ -4,21 +4,35 @@
         <strong>Su stock esta en camino,</strong> esto puede tardar unos segundos...
     </div>
     <p class="stock-available" style="display: none;">Su stock esta disponible...</p>
-    <h1>Inventario</h1>
+    <div class="section-titles">
+        <h1>Inventario</h1>
+        <h6 class="lead mb-3"><%= user.name %></h6>
+    </div>
     <button id="getStockButton">Traer Stock</button>
-    <table class="table table-hover">
-        <thead>
+    <div class="stock-wrapper">
+        <div class="list-header top-header green-background top-round-borders">
+            <div class="top-heading-25 white-font-color">Producto</div>
+            <div class="top-heading-25 white-font-color">Codigo de Producto</div>
+            <div class="top-heading-25 white-font-color">Disponibilidad</div>
+            <div class="top-heading-25 white-font-color">Deposito</div>
+        </div>
+        <ul id="stock" class="items-list bottom-round-borders">
+            <!-- stock renders here -->
+        </ul>
+    </div>
+    <!-- <table class="table table-hover top-round-borders bottom-round-borders">
+        <thead class="green-background white-font-color">
             <tr>
-            <th scope="col">Producto</th>
-            <th scope="col">Codigo de Producto</th>
-            <th scope="col">Disponibilidad</th>
-            <th scope="col">Deposito</th>
+                <th scope="col">Producto</th>
+                <th scope="col">Codigo de Producto</th>
+                <th scope="col">Disponibilidad</th>
+                <th scope="col">Deposito</th>
             </tr>
         </thead>
         <tbody id="stock">
-            <!-- Stock renders here -->
+            Stock renders here
         </tbody>
-    </table> 
+    </table>  -->
 </div>
 <script>
     // Show header when view is dashboard.
@@ -49,14 +63,23 @@
                 $('.loader-wrapper').hide();
                 var html = '';
                 for (var i = 0; i <= 20; i++) {
-                    html += '<tr class="table-default">'+
-                            '<th scope="row">' + stock[i].producto + '</th>'+
-                            '<td>'+
-                                '<a href="/products/'+ stock[i].codigoProducto +'/' + stock[i].producto[0].trim() + '/' + Math.round(stock[i].stockTotal) + '">' + stock[i].codigoProducto + '</a>'+
-                            '</td>'+
-                            '<td>' + Math.round(stock[i].stockTotal) + '</td>'+
-                            '<td>' + stock[i].almacen + '</td>'+
-                        '</tr>';
+                    // html += '<tr class="table-default">'+
+                    //         '<th scope="row">' + stock[i].producto + '</th>'+
+                    //         '<td>'+
+                    //             '<a href="/products/'+ stock[i].codigoProducto +'/' + stock[i].producto[0].trim() + '/' + Math.round(stock[i].stockTotal) + '">' + stock[i].codigoProducto + '</a>'+
+                    //         '</td>'+
+                    //         '<td>' + Math.round(stock[i].stockTotal) + '</td>'+
+                    //         '<td>' + stock[i].almacen + '</td>'+
+                    //     '</tr>';
+                    var isGray = i % 2 === 0 ? ' grey-background' : '';
+                    html += '<li class="list-item'+isGray+'">'+
+                            '<div class="inner"><span>'+stock[i].producto+'</span></div>'+
+                            '<div class="inner"> <span>'+
+                                    '<a href="/products/'+ stock[i].codigoProducto +'/' + stock[i].producto[0].trim() + '/' + Math.round(stock[i].stockTotal) + '">' + stock[i].codigoProducto + '</a>'+
+                            '</span></div>'+
+                            '<div class="inner"><span>'+ Math.round(stock[i].stockTotal) +' u.</span></div>'+
+                            '<div class="inner"><span>'+stock[i].almacen+'</span></div>'+
+                        '</li>';
                 }
                 $('#stock').html(html);
                 $('.stock-available').show().fadeOut(10000);
