--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css">
     <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.min.css">
     <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/newstyles.css">
     <title>We Carry</title>
 </head>
 <body>
