--- a/app/views/product.ejs
+++ b/app/views/product.ejs
@@ -13,6 +13,7 @@
             <p class="card-text">
                 <%= product.description %>
             </p>
+            <img src="/images/product-image-not-available.png" alt="imagen de producto" width="180" height="180">
         </div>
     </div>
     <a href="/dashboard" class="back">Volver</a>
