--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -586,6 +586,10 @@ table {
     border-color: #99CC33;
 }
 
+/* Tracking page */
+#tracking-page h1 {
+    margin: 104px 0 25px;
+}
 #tracking-page .time {
     font-size: 30px;
     text-transform: capitalize;
@@ -594,6 +598,21 @@ table {
 #tracking-page code.destination,
 #tracking-page .name {
     color: #555555 !important;
+}
+
+#tracking-page .info-body {
+    width: 100%;
+    display: flex;
+    padding: 25px;
+}
+
+#tracking-page .info-body h1 {
+    margin: 0;
+}
+
+#tracking-page .info,
+#tracking-page .map {
+    width: 50%;
 }
 
 #product-page .card {
